--- a/style.css
+++ b/style.css
@@ -1,51 +1,77 @@
-/* Reset some default styles for consistency across browsers */
-body, h1, h2, p {
-    margin: 0;
-    padding: 0;
+html, body {
+    margin: 0 auto;
+    background-color: #fcfcfc;
+    color: #2a2a2a;
+    font-family: "Libre Franklin";
+    font-size: 13pt;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
-/* Apply a box-sizing border-box model to all elements */
-*, *:before, *:after {
-    box-sizing: border-box;
+html, body, .container {
+    height: 100%;
+    width: 100%;
 }
 
-/* Style the body */
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
+a {
+    color: #C9283E;
+    text-decoration: none;
 }
 
-/* Style the header */
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1em;
-    text-align: center;
+a:hover {
+    text-decoration: underline;
 }
 
-/* Style the main sections */
-section {
-    text-align: center;
-    padding: 2em;
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* Style the footer */
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 1em;
-    text-align: center;
+.container div {
+    max-width: 800px;
+    width: 90%;
 }
 
-/* Style headings */
-h1, h2 {
-    color: #333;
+div.animate {
+    -moz-animation-delay: 0.3s;
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+    -moz-animation-duration: 1.2s;
+    -webkit-animation-duration: 1.2s;
+    animation-duration: 1.2s;
+    -moz-animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: fade;
+    animation-name: fade;
 }
 
-/* Style paragraphs */
-p {
-    line-height: 1.6;
+@-webkit-keyframes fade {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+@keyframes fade {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+ 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 800px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+    html {
+        font-size: 24pt;
+    }
 }
