--- a/style.css
+++ b/style.css
@@ -75,3 +75,10 @@ div.animate {
         font-size: 24pt;
     }
 }
+
+
+.text.animate {
+    overflow-y: scroll; /* This will make the content scrollable vertically */
+    max-height: 100%; /* You can set a maximum height for the content to prevent it from expanding infinitely */
+}
+
