--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ div.animate {
 
 
 .text.animate {
-    overflow-y: scroll; /* This will make the content scrollable vertically */
+   /* overflow-y: scroll; /* This will make the content scrollable vertically */
     max-height: 100%; /* You can set a maximum height for the content to prevent it from expanding infinitely */
 }
 
