--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
 html, body {
     margin: 0 auto;
-    padding: 0;
     background-color: #fcfcfc;
     color: #2a2a2a;
     font-family: "Libre Franklin";
     font-size: 13pt;
     font-weight: 400;
     line-height: 1.5;
-    transform: scale(0.9); /* Scale the entire content */
-    transform-origin: center top; /* Anchor scaling to the top-center */
 }
 
 html, body, .container {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
 }
 
 a {
@@ -29,8 +26,6 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
-    max-width: 90%; /* Adjust width to make it more compact */
 }
 
 .container div {
@@ -70,13 +65,20 @@ div.animate {
         opacity: 1;
     }
 }
-
+ 
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 800px)
   and (-webkit-min-device-pixel-ratio: 2) {
 
     html {
-        font-size: 24pt;
+        font-size: 20pt;
     }
 }
+
+
+.text.animate {
+   /* overflow-y: scroll; /* This will make the content scrollable vertically */
+    max-height: 100%; /* You can set a maximum height for the content to prevent it from expanding infinitely */
+}
+
