--- a/style.css
+++ b/style.css
@@ -2,14 +2,15 @@ html, body {
     margin: 0 auto;
     background-color: #fcfcfc;
     color: #2a2a2a;
-    font-family: "Libre Franklin";
+    font-family: "Libre Franklin", sans-serif;
     font-size: 13pt;
     font-weight: 400;
     line-height: 1.5;
+    min-height: 100vh; /* Ensure the page takes the full viewport height */
 }
 
 html, body, .container {
-    height: 100%;
+    height: auto; /* Allow content to grow dynamically */
     width: 100%;
 }
 
@@ -24,8 +25,9 @@ a:hover {
 
 .container {
     display: flex;
-    align-items: center;
+    align-items: flex-start; /* Align content to the top to avoid centering cutoff */
     justify-content: center;
+    flex-wrap: wrap; /* Allow flexibility for multiple containers */
 }
 
 .container div {
@@ -33,52 +35,26 @@ a:hover {
     width: 90%;
 }
 
-div.animate {
-    -moz-animation-delay: 0.1s;
-    -webkit-animation-delay: 0.1s;
-    animation-delay: 0.1s;
-    -moz-animation-duration: 1.2s;
-    -webkit-animation-duration: 1.2s;
-    animation-duration: 1.2s;
-    -moz-animation-fill-mode: both;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation-name: fade;
-    animation-name: fade;
+.text.animate {
+    overflow: visible; /* Ensure all text is shown */
+    animation: fade 1.2s ease-out both;
 }
 
-@-webkit-keyframes fade {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
 @keyframes fade {
     from {
         opacity: 0;
     }
-
     to {
         opacity: 1;
     }
 }
- 
+
 @media only screen 
   and (min-device-width: 320px) 
-  and (max-device-width: 800px)
+  and (max-device-width: 800px) 
   and (-webkit-min-device-pixel-ratio: 2) {
 
     html {
         font-size: 20pt;
     }
 }
-
-
-.text.animate {
-   /* overflow-y: scroll; /* This will make the content scrollable vertically */
-    max-height: 120%; /* You can set a maximum height for the content to prevent it from expanding infinitely */
-}
-
